--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -772,8 +772,9 @@ body {
                 }
             }
         }
+        .slick-cloned { display: none !important; }
     }
-    
+    .ps__rail-x, .ps__rail-x { display: none !important; }
     .footer__inner {
         flex-wrap: wrap;
         padding: 40px 40px 50px 40px;
